@@ -23,6 +23,9 @@ S3method(ROC, anota)
 S3method(AUC, anota)
 S3method(AUC, default)
 S3method(print, AUC)
+S3method(print, anota)
+S3method(plot, anota)
+S3method(confint, anota)
 
 S3method(print, samediff)
 S3method(coef, samediff)
